# python-project-83

./: .gitignore  Makefile  README.md  database.sql  env_vars.env  pyproject.toml  setup.cfg
page_analyzer/: app.py  db.py  model.py  utils.py
page_analyzer/scripts/: parser.py  validator.py
page_analyzer/templates/: 404.html  500.html  form.html  index.html  urls.html  urls_add.html
